# RAG-System-Optimization

./: .gitignore  Dockerfile.backend  README.md  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  database.py  factory.py  main.py  retriever.py
api/data/: context.json
data/: 20240727-103510testset.csv  20240727-103933testset.csv  20240727-104955testset.csv  20240801-092254testset.csv  Dense_600_50_recursive_gpt35turbo_multiQuery_Q5to8.csv  Dense_600_50_recursive_gpt35turbo_noTranslation.csv  Dense_600_50_recursive_gpt35turbo_noTranslation_Q5to8.csv  Dense_600_50_semantic_gpt35turbo_noTranslation_Q5to11.csv  Hybrid_600_50_recursive_gpt35turbo_multiQuery_Q5to8.csv  Hybrid_600_50_recursive_gpt35turbo_ragFusion_Q5to11.csv  Hybrid_600_50_semantic_gpt35turbo_multiQuery_Q5to8.csv  Hybrid_600_50_semantic_gpt35turbo_noTranslation_Q5to11.csv  Hybrid_600_50_semantic_gpt35turbo_noTranslation_Q5to8.csv  Qdrant_Dense_256_16_recursive_gpt35turbo_noTranslation_Q5to11.csv  Qdrant_Dense_600_50_recursive_gpt35turbo_ragFusion_Q5to11.csv  Qdrant_Dense_900_50_recursive_gpt35turbo_noTranslation_Q5to11.csv  Working_Qdrant_Dense_600_50_recursive_gpt35turbo_ragFusion_Q5to11.csv  gpt-3.5-turbo_qdrant_dense_recursive_900_50_no_translation.csv  gpt35turbo_hybrid_recursive_900_50_hyde.csv  gpt35turbo_hybrid_recursive_900_50_no_translation.csv  init_test_data.csv  merged_testset.csv
notebooks/: experimentation.ipynb  rag_systems.ipynb
rag_system/: pyproject.toml
scripts/: generate_test_name.py  rag_system.py  ragas_evaluation.py  testset_generator.py
tests/: generate_testset_test.py
