[tool.poetry]
name = "rag-system-optimization"
version = "0.1.0"
description = "Develop a Retrieval-Augmented Generation (RAG) system, benchmark its performance, and implement an optimization to improve the results."
authors = ["Abubeker Shamil <abubekershamil123@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
openai = "^1.37.1"
datasets = "^2.20.0"
ragas = "^0.1.11"
sentence-transformers = "^3.0.1"
scikit-learn = "^1.5.1"
langchain-community = "^0.2.10"
tiktoken = "^0.7.0"
langchainhub = "^0.1.20"
chromadb = "^0.5.5"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
langchain-core = "^0.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
