[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = ""
authors = ["Abubeker Shamil <abubekershamil123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
openai = "^1.37.1"
datasets = "^2.20.0"
ragas = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
